Split jacoco and robolectric to separate gradle scripts